Add Jlama inference (#167)
* Add Jlama inference

* Use the quantized model in CI

* Use the jlama quantized model by default

* Add instructions for running tests with Jlama

* Separate into maven profiles

---------

Co-authored-by: Eric Deandrea <eric@ericdeandrea.dev>

(cherry picked from commit 6e0a1d1c3e2281a4929809fa717e6f7094c2497a)